added health check

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
      - MYSQL_DATABASE=osdashboard
      - MYSQL_PASSWORD=root
      - MYSQL_PORT=3306
+   healthcheck:
+       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+       timeout: 240s
+       retries: 5
    ports:
       - "3306:3306"
    expose:
@@ -24,7 +28,6 @@ services:
       "--sync_binlog=1"
       ]
    restart: always
-   network_mode: host
   
   cp-os-dashboard:
     image: gcr.io/s4-oncsuite-dev-181912/cp-os-dashboard@sha256:f119e377e30a4a2447e4412533ac37384a6e921bda95445d308649a5eb6e86a9
@@ -40,7 +43,7 @@ services:
   cp-os-report:
     image: gcr.io/s4-oncsuite-dev-181912/cp-os-report@sha256:11d12c18eb67118eb6d122d0e652bde4076adb42f651a667886748a0af5f7467
     depends_on:
-      - cp-os-dashboard
+      - docker-mysql 
     ports:
       - 9095:9095
     restart: always
