updated with static private ips

--- a/env/dashboard.env
+++ b/env/dashboard.env
@@ -1,6 +1,6 @@
 db_user_name=root
 db_user_password=root
-db_url=jdbc:mysql://docker-mysql:3306/osdashboard
+dashboard_db_url=jdbc:mysql://172.28.1.1:3306/osdashboard
 notification_client_url=NA
 env_host=localhost
 reportservice_createreport_url=NA
