--- a/env/report.env
+++ b/env/report.env
@@ -1,10 +1,11 @@
 db_user_name=root
 db_user_password=root
+dashboard_db_url=jdbc:mysql://172.28.1.1:3306/osdashboard
 oncology_suite_key=oncology-suite-key
 oncology_suite_keyring=oncology-suite-keyring
 projectid=local
-dashboard_update_sample_qc_url=http://localhost:9090/cp-os-dashboard/samples/qcstatus
-dashboard_get_samplerunid_by_limsid_url=http://localhost:9090/cp-os-dashboard/sample/samplerunid
+dashboard_update_sample_qc_url=http://172.28.1.2:9090/cp-os-dashboard/samples/qcstatus
+dashboard_get_samplerunid_by_limsid_url=http://172.28.1.2:9090/cp-os-dashboard/sample/samplerunid
 nofone_biomarkercontent_api_url=http://localhost:9090/cp-os-nofone-service/report/:reportId/biomarkercontent
 nofone_reportinfo_api_url=http://localhost:9090/cp-os-nofone-service/report/:reportId/info
 kb_url=http://oncsuite-cav.sema4genomics.com/api/test/testapi
