--- a/env/report.env
+++ b/env/report.env
@@ -7,6 +7,7 @@ projectid=local
 dashboard_update_sample_qc_url=http://172.28.1.2:9090/cp-os-dashboard/samples/qcstatus
 dashboard_get_samplerunid_by_limsid_url=http://172.28.1.2:9090/cp-os-dashboard/sample/samplerunid
 nofone_biomarkercontent_api_url=http://localhost:9090/cp-os-nofone-service/report/:reportId/biomarkercontent
+dashboard_update_aggregate_report_status_url=NA
 nofone_reportinfo_api_url=http://localhost:9090/cp-os-nofone-service/report/:reportId/info
 kb_url=http://oncsuite-cav.sema4genomics.com/api/test/testapi
 kb_username=OncSuite
