--- a/docker-compose-dns.yml
+++ b/docker-compose-dns.yml
@@ -1,16 +1,27 @@
 version: '2.2'
+
 services: 
+  dnsdock:
+   image: tonistiigi/dnsdock
+   volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+   ports:
+     - 172.17.0.1:53:53/udp
+  
   docker-mysql:
    container_name: mysql
    image: mysql:5.7
+   dns: 172.17.0.1
    environment:
      - MYSQL_ROOT_PASSWORD=root
      - MYSQL_DATABASE=osdashboard
      - MYSQL_PASSWORD=root
      - MYSQL_PORT=3306
+     - DNSDOCK_NAME=oncsuite
+     - DNSDOCK_IMAGE=db
    healthcheck:
        test: ["CMD", "/usr/local/bin/mysql-healthcheck.sh"]
-       interval: 60s
+       interval: 80s
        timeout: 10s
        retries: 20
    ports:
@@ -31,13 +42,11 @@ services:
       "--max-allowed-packet=16M"
       ]
    restart: always
-   networks:
-        docker_net:
-            ipv4_address: 172.28.1.1
   
   cp-os-dashboard:
     container_name: cp-os-dashboard
     image: gcr.io/s4-oncsuite-dev-181912/cp-os-dashboard@sha256:3853c6fc4c60049d48b5b23e1c7f673e88f0fcecfba414a98147fb6984d9ef02
+    dns: 172.17.0.1
     depends_on:
       docker-mysql:
         condition: service_healthy
@@ -46,13 +55,11 @@ services:
     restart: always
     env_file:
       - env/dashboard.env
-    networks:
-        docker_net:
-            ipv4_address: 172.28.1.2
 
   cp-os-report:
     container_name: cp-os-report
-    image: gcr.io/s4-oncsuite-dev-181912/cp-os-report@sha256:ea4b193a6ce8cd104a4c89ad92948ed5cb1df29b261fb4d193e65dbedb26b0c1
+    image: gcr.io/s4-oncsuite-dev-181912/cp-os-report@sha256:c286e71bac7dd1e5ea083db83b96659832c1d1a8fbc5589a205c292baba3a69f
+    dns: 172.17.0.1
     depends_on:
       docker-mysql:
         condition: service_healthy
@@ -61,16 +68,6 @@ services:
     restart: always
     env_file:
       - env/report.env
-    networks:
-        docker_net:
-            ipv4_address: 172.28.1.3            
     
-networks:
-    docker_net:
-        ipam:
-            driver: default
-            config:
-                - subnet: 172.28.0.0/16
-
 volumes:
   mysql-data:
