--- a/env/report-local.env
+++ b/env/report-local.env
@@ -9,11 +9,11 @@ dashboard_get_samplerunid_by_limsid_url=http://172.28.1.2:9090/cp-os-dashboard/s
 nofone_biomarkercontent_api_url=http://localhost:9090/cp-os-nofone-service/report/:reportId/biomarkercontent
 dashboard_update_aggregate_report_status_url=NA
 nofone_reportinfo_api_url=http://localhost:9090/cp-os-nofone-service/report/:reportId/info
-kb_url=http://oncsuite-cav.sema4genomics.com/api/test/testapi
+kb_url=NA
 kb_username=OncSuite
-kb_clinicaltrial_load_password=h3s?J_f$@CL_ct
-kb_narratives_load_password=h3s?J_f$@CL_load
-kb_narratives_upload_password=h3s?J_f$@CL_upload
+kb_clinicaltrial_load_password=NA
+kb_narratives_load_password=NA
+kb_narratives_upload_password=NA
 oncsuite_url=NA
 notification_client_url=NA
 
